ci: remove auto-version bump from npm publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 permissions:
-  contents: write
+  contents: read
   id-token: write
 
 jobs:
@@ -38,14 +38,6 @@ jobs:
             echo "exists=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Bump version if exists
-        if: steps.check.outputs.exists == 'true'
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          bun pm version patch -m "Bump version to %s [skip ci]"
-          git push
-
       - name: Install dependencies
         run: bun install
 
@@ -62,4 +54,5 @@ jobs:
         run: bun run build
 
       - name: Publish to npm
+        if: steps.check.outputs.exists != 'true'
         run: bunx npm publish --provenance --access public
